Fixing social mobile z-index for smaller phones again. Fixing Text too close to footer issue.

--- a/src/styles/mobile.less
+++ b/src/styles/mobile.less
@@ -782,12 +782,12 @@
                     opacity: 1;
                 }
                 ~ .options {
-                    margin-left: 1vw;
+                    margin-left: 1.1vw;
                     // display: block;
-                    width: ~'calc((35px + 2vw) * 4)';
+                    width: ~'calc((35px + 2.2vw) * 4)';
                     .bubble {
                         .transform(scale(1.1));
-                        margin: 0 1vw;
+                        margin: 0 1.1vw;
 
                         @from : 1;
                         @to : 4;
